# pull-notes

./: .dockerignore  .gitignore  DOCUMENTACAO.md  Dockerfile  README.md  config.default.json  docker-compose.yml  domain_step.py  exemplos_uso.sh  gerador.py  preencher_dominio.py  pyproject.toml  requirements.txt  setup-docker.sh  setup-local.sh
docs/: ARCHITECTURE.md  CLI.md  CONFIGURATION.md  DATA_MODELS.md  DESIGN_PATTERNS.md  INTEGRATIONS.md  MODULES.md  README.md  WORKFLOWS.md  conformidade.md  docker-usage.md  ollama-gpu-cuda.md
src/gerador_cli/: __init__.py  __main__.py  cli.py  config.py
src/gerador_cli/adapters/: domain_definition.py  domain_poc.py  domain_profile.py  filesystem.py  http.py  llm_structured.py  prompt_debug.py  subprocess.py
src/gerador_cli/domain/: __init__.py  domain_profile.py  models.py  schemas.py  services.py
src/gerador_cli/prompts/: commit_group_summary.txt  commit_group_summary_pr.txt  commit_summary.txt  domain_xml.txt  pr_fields.txt  release_fields.txt
src/gerador_cli/workflows/: sync.py
src/gerador_cli/xml/: XSD_dominio.xml
src/pullnotes/: __init__.py  __main__.py  cli.py  config.py
src/pullnotes/adapters/: __init__.py  domain_definition.py  domain_profile.py  filesystem.py  http.py  llm_structured.py  prompt_debug.py  subprocess.py
src/pullnotes/domain/: errors.py  models.py  schemas.py
src/pullnotes/prompts/: __init__.py  commit_group_summary_pr.txt  commit_group_summary_release.txt  domain_profile.txt  dynamic_fields.txt  pr_fields.txt  release_fields.txt
templates/: pr.md
tests/: conftest.py  helpers.py  test_adapters.py  test_aggregation.py  test_cli.py  test_composition.py  test_config.py  test_data_collection.py  test_dynamic_fields.py  test_e2e.py  test_export.py  test_integration.py  test_llm_client.py  test_models.py  test_performance.py  test_prompts.py  test_render.py  test_schemas.py  test_sensitive_files.py  test_template_parser.py
treinamento_classificador/: extrair_commits.py  resultado-busca.csv
xml/: XSD_dominio.xml  dominio.xml
(+16 files in other folders)
