[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gerador-cli"
version = "0.1.0"
description = "Gerador de descricoes de PR e release notes a partir de um repositorio Git."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml",
    "ollama",
    "pydantic>=2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["gerador", "domain_step", "preencher_dominio"]

[tool.setuptools.package-data]
"gerador_cli" = ["prompts/*.txt"]

[project.scripts]
gerador-cli = "gerador_cli.__main__:main"
