[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pullnotes"
version = "0.1.0"
description = "PullNotes - Gera descricoes de PR e release notes a partir de um repositorio Git."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml",
    "ollama",
    "pydantic>=2.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = []

[tool.setuptools.package-data]
"pullnotes" = ["prompts/*.txt", "templates/*.md"]

[project.scripts]
pullnotes = "pullnotes.__main__:main"
